Mobile Version (Design).

--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
         <button id="Button2" ><a href="index.html">Play Now</a></button>
     </section>  
 
-    <section><footer></footer></section>
+    <section><footer></footer>©TheDevCaio</section>
 </main>
 </body>
 </html>
