--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
   <section><div class="tabuleiro"></div></section>
     </body>
-    <section class="F"><footer>©TheDevCaio</footer></section>
+    <section class="F"><footer></footer></section>
 </main>
 </html>
