--- a/home.html
+++ b/home.html
@@ -26,35 +26,26 @@
 
     <section>
         <ul id="leads">
-          <li>1: A match is played between the player and the computer.</li>
-          <br>
-          <li>2: Each match consists of exactly 6 rounds, ending immediately after the resolution of the 6th round.</li>
-          <br>
-          <li>3: The objective of the game is to control the majority of the 3 available locations.</li>
-          <br>
-          <li>4: The player controls a location if the sum of the strengths of their characters at the location is greater than the sum of the opponent's characters also at the location.</li>
-          <br>
-          <li>5: Each player starts with a deck containing the same 12 character cards. Each card has a name, an energy cost, and a strength value.</li>
-          <br>
-          <li>6: At the beginning of the match, players randomly draw 4 cards into their hands.</li>
-          <br>
-          <li>7: At the start of each round, each player receives:
-            <br>
-            - A newly drawn card added to their hand;
-            <br>
-            - Total energy equal to the current round number (from 1 to 6).
-          </li>
-          <br>
-          <li>8: The player can spend energy to place the cards from their hand on a valid location.</li>
-          <br>
-          <li>9: The player cannot place a card if they do not have enough energy to play it.</li>
-          <br>
-          <li>10: The player cannot place more than 4 cards at a location.</li>
-          <br>
-          <li>11: Unused energy is lost at the end of the round.</li>
-          <br>
-          <li>12: The winner will be the one who, at the end of the match, controls the majority of the 3 locations in dispute.</li>
-        </ul>
+  <li>1: The game is played on a board with holes arranged in a cross shape.</li>
+  <br>
+  <li>2: Initially, all the holes on the board are filled with pegs, except for the central hole.</li>
+  <br>
+  <li>3: The objective of the game is to eliminate as many pegs as possible by jumping over them with other pegs.</li>
+  <br>
+  <li>4: A peg can jump over another peg horizontally or vertically to an empty hole, and the jumped peg is removed from the board.</li>
+  <br>
+  <li>5: Only one peg must remain on the board, ideally in the central hole, for the player to win the game.</li>
+  <br>
+  <li>6: A valid move is when a peg jumps over another peg into an empty hole in a straight line (horizontally or vertically).</li>
+  <br>
+  <li>7: Diagonal moves are not allowed in this version of the game.</li>
+  <br>
+  <li>8: The game is considered successful if only one peg remains on the board in the end.</li>
+  <br>
+  <li>9: If you are stuck and cannot make any more valid moves, the game is over, and you have to restart.</li>
+  <br>
+  <li>10: The fewer pegs left on the board at the end, the better your performance in the game.</li>
+</ul>
       </section>
         
       <section>
